# gstreamer-android

app/: build.gradle
app/src/androidTest/java/com/example/gstreamer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gstreamer_android.cpp  gstreamer_android_player.cpp
app/src/main/java/com/example/gstreamer/: GStreamerPlayer.kt  MainActivity.kt
app/src/main/java/org/freedesktop/gstreamer/: GStreamer.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/gstreamer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
